--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
     "no-use-before-define": "off",
     "@typescript-eslint/explicit-module-boundary-types": [
       "warn"
-    ]
+    ],
+    "react/prop-types": "off"
   },
   "settings": {
     "import/resolver": {
