--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,10 @@
       "warn"
     ],
     "react/prop-types": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "camelcase": "off",
+    "no-restricted-globals": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   },
   "settings": {
     "import/resolver": {
