--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,15 +11,30 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "agrodata-ui": "^0.0.13",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.15",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@craco/craco": "^6.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "craco-less": "^1.17.1",
@@ -34,7 +50,7 @@
     "prettier": "^2.2.1"
   },
   "scripts": {
-    "start": "yarn compile-less && craco start",
+    "start": "set HTTPS=true&&yarn compile-less && craco start",
     "compile-less": "lessc ./src/assets/less/index.less ./src/assets/css/index.css --js",
     "build": "craco build",
     "test": "craco test",
